force-app/main/default/objects/Contact/fields/Do_Not_Contact_Reason__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_Reason__c</fullName>
    <description>Reason why contact should not be contacted</description>
    <inlineHelpText>Enter the reason this contact should not be contacted</inlineHelpText>
    <label>Do Not Contact Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>