force-app/main/default/objects/Contact/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <description>utm_content of the Contact when they have responded to a Campaign, this will map to the Campaign Member field.</description>
    <label>utm_content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>