force-app/main/default/objects/Contact/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <description>utm_medium of the Contact when they have responded to a Campaign, this will map to the Campaign Member field.</description>
    <label>utm_medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>