force-app/main/default/objects/Contact/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <description>utm_source of the Contact when they have responded to a Campaign, this will map to the Campaign Member field.</description>
    <label>utm_source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>