force-app/main/default/objects/Contact/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <description>utm_term of the Contact when they have responded to a Campaign, this will map to the Campaign Member field.</description>
    <label>utm_term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>