force-app/main/default/objects/Contact/validationRules/Do_Not_Contact_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>If Preferred_Contact_Method__c is set to 'Do Not Contact', then Do_Not_Contact_Reason__c must be populated.</description>
    <errorConditionFormula>AND(ISPICKVAL(Preferred_Contact_Method__c, 'Do Not Contact'), ISBLANK(Do_Not_Contact_Reason__c))</errorConditionFormula>
    <errorMessage>Do Not Contact Reason is required when Preferred Contact Method is set to 'Do Not Contact'.</errorMessage>
    <errorDisplayField>Do_Not_Contact_Reason__c</errorDisplayField>
</ValidationRule>