force-app/main/default/objects/Contact/validationRules/SMS_Requires_Mobile_Phone.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Validation rule: if Preferred_Contact_Method__c equals 'SMS', then MobilePhone must be populated.</description>
    <errorConditionFormula>AND(ISPICKVAL(Preferred_Contact_Method__c, 'SMS'), ISBLANK(MobilePhone))</errorConditionFormula>
    <errorMessage>Mobile Phone is required when SMS is selected as the Preferred Contact Method.</errorMessage>
    <errorDisplayField>MobilePhone</errorDisplayField>
</ValidationRule>